# user_module

./: .env.example  .gitignore  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  tenants.py  users.py
app/services/: registration.py
migrations/: 0001_initial.py
