[project]
name = "user-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic==1.13.1",
    "asyncpg>=0.31.0",
    "bcrypt==4.1.3",
    "fastapi==0.111.0",
    "greenlet>=3.5.0",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
]
